<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">


    <TextView
        android:text="@string/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/message"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:id="@+id/upload"
        android:onClick="upload"
        android:layout_marginBottom="85dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/livefeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/livefeed"
        android:layout_gravity="center_horizontal"
        android:onClick="livefeed"
        android:layout_marginBottom="89dp"
        android:layout_above="@+id/upload"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
