<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jellodev.obd2analyzerv10.LiveFeed"
    android:background="@drawable/bg"
    android:keepScreenOn="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rpm"
        android:id="@+id/rpm"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:textColor="#000000"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/load"
        android:id="@+id/load"
        android:layout_below="@+id/rpm"
        android:layout_alignLeft="@+id/rpm"
        android:layout_alignStart="@+id/rpm"
        android:textColor="#000000"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/speed"
        android:id="@+id/speed"
        android:layout_below="@+id/load"
        android:layout_alignLeft="@+id/load"
        android:layout_alignStart="@+id/load"
        android:textColor="#000000"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/maf"
        android:id="@+id/textView5"
        android:layout_below="@+id/temperature"
        android:layout_alignLeft="@+id/temperature"
        android:layout_alignStart="@+id/temperature"
        android:textColor="#000000"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/temp"
        android:id="@+id/temperature"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_below="@+id/speed"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/engtemp"
        android:id="@+id/outtemp"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textColor="#000000"
        android:textSize="23sp"
        android:layout_alignBaseline="@+id/load"
        android:layout_alignBottom="@+id/load"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:text="Km/h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:text="T.int"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_alignBaseline="@+id/temperature"
        android:layout_alignBottom="@+id/temperature"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:text="MAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView6" />

    <TextView
        android:text="T.car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_below="@+id/textView7"
        android:layout_alignEnd="@+id/textView7" />

    <TextView
        android:text="RPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginEnd="19dp"
        android:layout_above="@+id/textView3"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
